--- a/GeoAddin/Openings_Windows/OpeningWin_ElementSelection.resx
+++ b/GeoAddin/Openings_Windows/OpeningWin_ElementSelection.resx
@@ -123,4 +123,7 @@
   <metadata name="openFile_ofd.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>291, 17</value>
   </metadata>
+  <metadata name="menu_ms.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>412, 17</value>
+  </metadata>
 </root>
